crates/oxc_css_parser/tests/error/scss/at-rule/use/with-before-as.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `<ident>`
  ┌─ with-before-as.scss:1:27
  │
1 │ @use "other" with ($a: b) as c;
  │                           ^^


